// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders the Logo correctly with no props  1`] = `
<img
  alt="unapologetic logo"
  className=""
  src="https://img.icons8.com/ios/50/000000/pick-up.png"
/>
`;

exports[`Renders the Logo correctly with test props 1`] = `
<img
  alt="unapologetic logo"
  className="sampleClass"
  src="https://img.icons8.com/search"
/>
`;
